psad-2.1 (10/19/2007):
    - Changed EMAIL_LIMIT model to apply to scanning source addresses only
      instead of also factoring in the destination address. The original
      src/dst email limit behavior can be restored by setting a new variable
      "ENABLE_EMAIL_LIMIT_PER_DST" to "Y".
    - Added the patches/iptables-1.3.8_LOG_prefix_space.patch file which can
      be applied to the iptables-1.3.8 code to enforce a trailing space
      character before any log prefix when a LOG rule is added. This ensures
      that the user cannot break the iptables syslog format just by forgetting
      to include a space at the end of a logging prefix.
    - Bugfix to ensure that parsing TCP options does not descend into an
      infinite loop in some some circumstances with obscure or maliciously
      constructed options.  Also added syslog reporting for broken options
      lengths of zero or one byte (the minimum option length is two bytes to
      accomodate the TLV encoding).
    - Bugfix to enforce the usage of --CSV-fields in --gnuplot mode.
    - Implemented --get-next-rule-id so that it is easy to assign a new rule
      ID to a new signature in the /etc/psad/signatures file.
    - Updated to just call die() if GetOpt fails; this allows erroneous usage
      of the command line to display informative error messages more clearly.

psad-2.0.8 (07/27/2007):
    - Added --gnuplot mode so that psad can output data that is suitable for
      plotting with gnuplot. All output produced in this mode is integer data
      with the exception of date stamps that are derived from iptables syslog
      messages.
    - Added the ability to negate match conditions on fields specified with
      the --CSV-fields argument by prepending the string "not" (which plays
      more nicely with shells like bash than a character like "!"). For
      example, to graph all packet data in --gnuplot or --CSV modes that
      originates from the 11.11.0.0/16 subnet and is not destined for port