@@ -1,3 +1,6 @@
+psad-2.1.1 (//2008):
+    - Minor bugfix to generate syslog message when restarting a psad process.
+
 psad-2.1 (10/19/2007):
     - Changed EMAIL_LIMIT model to apply to scanning source addresses only
       instead of also factoring in the destination address. The original
